static/main.css
 *{
    margin: 0x;
    padding: 0px;
    box-sizing: border-box;
} 

body{
    font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif
 }

 h1,h2,h3,h4,h5,h6{
     font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight:700;
     }
     
.caps{
    text-transform: uppercase;
}


.nav .btn {
    margin-right: 25px;
}

.justify-content-center {
    justify-content: space-between;
    padding: 15px 60px;
}

.navBar{
    background-color: #111111b8;
    overflow: hidden;
    height: 63px;
}

.navBar a{
    float:left;
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.navBar ul{
    margin: 8px 0 0 0;
    list-style: none;
}

.navBar a:hover{
    background-color: #dddddd;
    color: black;
}

.side-navBar{
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 11;
    top: 63px;
    left: 0;
    background-color: #111111b8;
    opacity: 0.9;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s;
}

.side-navBar a{
    padding: 10px 10px 10px 30px;
    text-decoration: none;
    font-size: 22px;
    color: white;
    display: block;
    transition: 0.3s;
}

.side-navBar a:hover{
    color: #fff;
}

.side-navBar .btn-close{
    position: absolute;
    top: 0;
    right: 22px;
    font-size: 36px;
    margin-left: 50px;
}

#main{
    transition: margin-left 0.5s;
    padding:20px;
    overflow: hidden;
    width: 100%;
}


@media(max-width:568px){
    .navBar-navLink{display: none}
}


/*home page*/


header.masthead{
    position:relative;
    background-color:#343a40;
    background:url(/static/img/headerimg1.jpg) no-repeat center center;
    background-size:cover;
    padding-top:8rem;
    padding-bottom:8rem;
    }

.smoothieshead{
    position:relative;
    background-color:#343a40;
    background:url(/static/img/smoothiesimg2.jpg) no-repeat center center;
    background-size:cover;
    padding-top: 8rem;
    padding-bottom: 15rem;
    }
    
/*header.masthead .overlay{
    position:absolute;
    background-color:#212529;
    height:100%;
    width:100%;
    top:0;
    left:0;
    opacity:.3;
}*/

.overlay{
    position:absolute;
    background-color:#212529;
    height:100%;
    width:100%;
    top:0;
    left:0;
    opacity:.3;
}

.btn,
.form-control-lg {
    border-radius: 10px;
}
    
header.masthead h1{
    font-size:2rem;
}
    
.intro{
    padding-top: 5rem;
    padding-bottom: 5rem;
}

.intro-icons{
    color: #f56881;
}

.dessert{
    background-color: #f7d6b552;
}

.protein{
    background-color: #edffe496;
}

.vegan{
    background-color: #ffe4ed96;
}

.fa-ice-cream{
    color: #f1ba57;
}

.fa-dumbbell{
    color: #7dc124;
}

.fa-seedling{
    color: #ef62a8;
}

.footer-links a{
    color: #dc3545;
}

.footer-links a:hover {
    color: #000000;
    text-decoration: none;
}

.footer-icons a{
    color: #000000;
}

.footer-icons a:hover {
    color: #dc3545;
    text-decoration: none;
}

.flashes{
    list-style-type: none;
}

.card-img-view{
   width: 30vw;
    height: 30vw;
    object-fit: cover; 
    border-radius: 15px;
    margin-left: 50px;
}

.card-img-top {
    width: 100%;
    height: 15vw;
    object-fit: cover;
}

.card{
    width: 30rem;
    padding: 5px 50px 40px 25px;
    border: none;
}


.img-position{
    overflow: hidden;
    background-size: cover;
    background-position: center;
    border-radius: 10px;

}


.cards{
    display: inline-grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-gap: 48px;
    border-radius: 15px;
}

.right-span{
    float: right;
}

.card-btns{
text-align: center;
}

.text-muted {
    color: #d0d2d8!important;
}

.add-container{
height: 100vh;
  background: url("/static/img/icecubes1.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.view-container{
height: 100vh;
  background: url("/static/img/icecubes1.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.view-container .jumbotron {
    background-color: #111111b8;
    border-radius: 20px;
    padding: 3em 8em;
    margin: 3em 8em;
}

.login-container {
  height: 100vh;
  background: url("/static/img/loginimg1.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.register-container{
      height: 100vh;
  background: url("/static/img/registerimg1.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
}

.jumbotron{
    background-color: #111111b8;
    border-radius: 20px;
    padding: 3em 8em;
}




@media (min-width:768px){
    header.masthead{
        padding-top:12rem;
        padding-bottom:12rem;
        }
    header.masthead h1{
        font-size:3rem;
        }
    }
        
.showcase .showcase-text{
    padding:3rem;
    }
    
.showcase .showcase-img{
    min-height:30rem;
    background-size:cover;
    }
    
@media (min-width:768px){
    .showcase .showcase-text{
        padding:7rem;
        }
    }
    
    
.testimonials{
    padding-top:7rem;
    padding-bottom:7rem;
    }
    
.testimonials .testimonial-item{
    max-width:18rem;
    }
    
.testimonials .testimonial-item img{
    max-width:12rem;
    box-shadow:0 5px 5px 0 #adb5bd
    }
    
.call-to-action{
    position:relative;
    background-color:#343a40;
    background:url("/static/img/headerimg1.jpg") no-repeat center center;
    background-size:cover;
    padding-top:7rem;
    padding-bottom:7rem;
    }
    
.call-to-action .overlay{
    position:absolute;
    background-color:#212529;
    height:100%;
    width:100%;
    top:0;
    left:0;
    opacity:.3;
    }
    
footer.footer{
    padding-top:2rem;
    padding-bottom:2rem;
    }

